<resources>
    <string name="app_name">Trivia App</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_questions">Question: 45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect">Incorrect</string>
    <string name="placeholder">Kinza amjad is so intelligent i never ever have seen so much itelligent girl like kinza</string>
</resources>